# simple_sim_office

./: CMakeLists.txt  README.md  package.xml
launch/: office.launch  office_white.launch  random_objects.launch
map/: blue_tape_floor.yaml  blue_tape_floor_obstacles_1.yaml  white_tape_floor.yaml
robot/: ackermann.yaml  differential.yaml
scripts/: place_random_object.py
