<?xml version="1.0"?>
<package format="2">
  <name>simple_sim_office</name>
  <version>0.0.1</version>
  <description>The simple_sim_office package</description>

  <maintainer email="npaul@ltu.edu">Nicholas Paul</maintainer>
  <maintainer email="gderose2@gmail.com">Joe DeRose</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/ltu-ros/simple_sim_office</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>timed_roslaunch</exec_depend>
</package>
